# llm-router

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/assets/: architecture.html
src/llmrouter/: __init__.py  benchmark.py  cli.py  data.py  providers.py  router.py
tests/: test_router.py
