[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-router"
version = "0.1.0"
description = "Route each query to the cheapest LLM that can answer it — learned router benchmarked vs always-small/always-large on cost and quality"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Taimour Abdul Karim", email = "taimour.a.karim@gmail.com" }]
keywords = ["llm", "routing", "cost-optimization", "claude", "inference", "ml"]
dependencies = ["scikit-learn>=1.3", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]
claude = ["anthropic>=0.40"]
bedrock = ["anthropic[bedrock]>=0.40", "python-dotenv>=1.0"]

[project.scripts]
llm-router = "llmrouter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llmrouter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
